// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`figcaption renders with accessKey="a,b,c,d" 1`] = `
<figcaption
  accessKey="a,b,c,d"
/>
`;

exports[`figcaption renders with autoCapitalize="characters" 1`] = `
<figcaption
  autoCapitalize="characters"
/>
`;

exports[`figcaption renders with autoCapitalize="none" 1`] = `
<figcaption
  autoCapitalize="none"
/>
`;

exports[`figcaption renders with autoCapitalize="off" 1`] = `
<figcaption
  autoCapitalize="off"
/>
`;

exports[`figcaption renders with autoCapitalize="on" 1`] = `
<figcaption
  autoCapitalize="on"
/>
`;

exports[`figcaption renders with autoCapitalize="sentences" 1`] = `
<figcaption
  autoCapitalize="sentences"
/>
`;

exports[`figcaption renders with autoCapitalize="words" 1`] = `
<figcaption
  autoCapitalize="words"
/>
`;

exports[`figcaption renders with children 1`] = `
<figcaption>
  TEST
</figcaption>
`;

exports[`figcaption renders with className="foo bar baz" 1`] = `
<figcaption
  className="foo bar baz"
/>
`;

exports[`figcaption renders with contentEditable="false" 1`] = `
<figcaption
  contentEditable="false"
/>
`;

exports[`figcaption renders with contentEditable="true" 1`] = `
<figcaption
  contentEditable="true"
/>
`;

exports[`figcaption renders with dir="auto" 1`] = `
<figcaption
  dir="auto"
/>
`;

exports[`figcaption renders with dir="ltr" 1`] = `
<figcaption
  dir="ltr"
/>
`;

exports[`figcaption renders with dir="rtl" 1`] = `
<figcaption
  dir="rtl"
/>
`;

exports[`figcaption renders with draggable="false" 1`] = `
<figcaption
  draggable="false"
/>
`;

exports[`figcaption renders with draggable="true" 1`] = `
<figcaption
  draggable="true"
/>
`;

exports[`figcaption renders with empty attributes 1`] = `<figcaption />`;

exports[`figcaption renders with hidden="false" 1`] = `
<figcaption
  hidden={false}
/>
`;

exports[`figcaption renders with hidden="true" 1`] = `
<figcaption
  hidden={true}
/>
`;

exports[`figcaption renders with id="TEST" 1`] = `
<figcaption
  id="TEST"
/>
`;

exports[`figcaption renders with inputMode="decimal" 1`] = `
<figcaption
  inputMode="decimal"
/>
`;

exports[`figcaption renders with inputMode="email" 1`] = `
<figcaption
  inputMode="email"
/>
`;

exports[`figcaption renders with inputMode="none" 1`] = `
<figcaption
  inputMode="none"
/>
`;

exports[`figcaption renders with inputMode="numeric" 1`] = `
<figcaption
  inputMode="numeric"
/>
`;

exports[`figcaption renders with inputMode="search" 1`] = `
<figcaption
  inputMode="search"
/>
`;

exports[`figcaption renders with inputMode="tel" 1`] = `
<figcaption
  inputMode="tel"
/>
`;

exports[`figcaption renders with inputMode="text" 1`] = `
<figcaption
  inputMode="text"
/>
`;

exports[`figcaption renders with inputMode="url" 1`] = `
<figcaption
  inputMode="url"
/>
`;

exports[`figcaption renders with is="foo" 1`] = `
<figcaption
  is="foo"
/>
`;

exports[`figcaption renders with itemID="https://google.com/" 1`] = `
<figcaption
  itemID="https://google.com/"
/>
`;

exports[`figcaption renders with itemProp="https://google.com/" 1`] = `
<figcaption
  itemProp="https://google.com/"
/>
`;

exports[`figcaption renders with itemRef="foo bar" 1`] = `
<figcaption
  itemRef="foo bar"
/>
`;

exports[`figcaption renders with itemScope="false" 1`] = `
<figcaption
  itemScope={false}
/>
`;

exports[`figcaption renders with itemScope="true" 1`] = `
<figcaption
  itemScope={true}
/>
`;

exports[`figcaption renders with itemType="https://google.com/" 1`] = `
<figcaption
  itemType="https://google.com/"
/>
`;

exports[`figcaption renders with lang="" 1`] = `
<figcaption
  lang=""
/>
`;

exports[`figcaption renders with lang="es-419" 1`] = `
<figcaption
  lang="es-419"
/>
`;

exports[`figcaption renders with slot="TEST" 1`] = `
<figcaption
  slot="TEST"
/>
`;

exports[`figcaption renders with spellCheck="false" 1`] = `
<figcaption
  spellCheck="false"
/>
`;

exports[`figcaption renders with spellCheck="true" 1`] = `
<figcaption
  spellCheck="true"
/>
`;

exports[`figcaption renders with style="[object Object]" 1`] = `
<figcaption
  style={
    Object {
      "color": "#000000",
    }
  }
/>
`;

exports[`figcaption renders with tabIndex="1" 1`] = `
<figcaption
  tabIndex={1}
/>
`;

exports[`figcaption renders with title="TEST" 1`] = `
<figcaption
  title="TEST"
/>
`;

exports[`figcaption renders with translate="no" 1`] = `
<figcaption
  translate="no"
/>
`;

exports[`figcaption renders with translate="yes" 1`] = `
<figcaption
  translate="yes"
/>
`;

exports[`figcaption renders without attributes 1`] = `<figcaption />`;
